header + overflow fix

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -109,16 +109,17 @@ header {
         height: 500px;
     }
     .portrait {
-        right: -175px !important;
+        right: -150px !important;
         opacity: 0.7 !important;
-        bottom: -150px !important;
+        bottom: -50px !important;
         height: 500px !important;
     }
 }
 
 @media screen and (max-width: 430px) {
     .header {
-        height: 100vh;
+        height: 97.5vh;
         padding: 75px 15px;
+        gap: 75px;
     }
 }
